--- a/styles.css
+++ b/styles.css
@@ -4,47 +4,79 @@ COLORS
 teal - #0fb9b1;
 frosted white - rgba(225, 225, 225, .9);
 grey - #95a5a6;
-red - #ee5253
+red - #ee5253 */
 
-*/
-
-nav {
-  background-color: mediumseagreen;
-}
-/* /not aligned with top and sides of window */
-h1 {
-  text-align: left;
-}
-
-button {
-
-}
-
-
-
-html {
+body {
+  margin: 0px;
   background: url('assets/burger-friends.jpg'); 
   background-size: cover;
 }
 
+nav {
+  background-color: teal;
+  margin: 0;
+  width: 100%;
+  height: 50px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-left: 5%;
+  padding-right: 5%
+}
+
+h1 {
+  font-family: Roboto;
+}
+
+.radio-button, .prompt {
+  font-family: Roboto;
+}
+
+.add-a-recipe {
+  /* slylize here */
+}
+
 .left-box {
-  background-color: white;
-  height: 300px;
-  width: 500px;
+  background-color: rgba(225, 225, 225, .9);
+  height: 400px;
+  width: 480px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  padding-left: 3%;
+}
+
+.get-recipe {
+    background-color: teal;
+    border: none;
+    color: black;
+    text-align: center;
+    font-size: 12px;
+    height: 40px;
+    width: 120px;
+    white-space: nowrap;
 }
 
 .right-box {
-  background-color: white;
-  height: 300px;
-  width: 500px;
-}
-/* 
-h1 {
-  color: white;
-  text-align: center;
+  background-color: rgba(225, 225, 225, .9);
+  height: 400px;
+  width: 480px;
+  display: flex;
+  justify-content: center;
 }
 
-p {
-  font-family: verdana;
-  font-size: 20px;
-} */
+.prompt {
+  font-size: 25px;
+}
+
+.box {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  padding: 40px;
+}
+
+img {
+  max-width: 25%;
+  height: auto;
+}
