--- a/styles.css
+++ b/styles.css
@@ -48,6 +48,10 @@ h1 {
   padding-left: 25px
 }
 
+.hidden {
+  display: none!important;
+}
+
 .get-recipe {
     background-color: teal;
     border-width:thin;
@@ -87,4 +91,9 @@ p {
   font-family: verdana;
   font-size: 20px;
   
+}
+
+.suggestion {
+  font-family: verdana;
+  font-size: 30px;
 }
