--- a/styles.css
+++ b/styles.css
@@ -5,9 +5,14 @@ teal - #0fb9b1;
 frosted white - rgba(225, 225, 225, .9);
 grey - #95a5a6;
 red - #ee5253 */
+.hidden {
+  display: none!important;
+}
+
 * {
   box-sizing: border-box
 }
+
 body {
   margin: 0px;
   background: url('assets/burger-friends.jpg'); 
@@ -26,16 +31,12 @@ nav {
   padding-right: 20px;
 }
 
-h1 {
+.radio-button, .prompt, h1 {
   font-family: Roboto;
 }
 
-.radio-button, .prompt {
-  font-family: Roboto;
-}
-
-.add-a-recipe {
-  /* slylize here */
+.prompt {
+  font-size: 25px;
 }
 
 .left-box {
@@ -48,11 +49,14 @@ h1 {
   padding-left: 25px
 }
 
-.hidden {
-  display: none!important;
+.box {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  padding: 40px;
 }
 
-.get-recipe {
+.lets-cook {
     background-color: teal;
     border-width:thin;
     color: black;
@@ -71,15 +75,21 @@ h1 {
   justify-content: center;
 }
 
-.prompt {
-  font-size: 25px;
+section {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  text-align: center;
 }
 
-.box {
-  display: flex;
-  justify-content: space-evenly;
-  align-items: center;
-  padding: 40px;
+i {
+  font-family: verdana;
+  font-size: 15px
+}
+
+.suggestion {
+  font-family: verdana;
+  font-size: 30px;
 }
 
 img {
@@ -90,10 +100,6 @@ img {
 p {
   font-family: verdana;
   font-size: 20px;
-  
 }
 
-.suggestion {
-  font-family: verdana;
-  font-size: 30px;
-}
+
