--- a/styles.css
+++ b/styles.css
@@ -31,6 +31,16 @@ nav {
   padding-right: 20px;
 }
 
+.add-a-recipe {
+  background-color: rgba(225, 225, 225, .9);
+  border: none;
+  color: black;
+  padding: 10px;
+  text-align: center;
+  font-size: 14px;
+  border-radius: 6px;
+}
+
 .radio-button, .prompt, h1 {
   font-family: Roboto;
 }
@@ -58,13 +68,14 @@ nav {
 
 .lets-cook {
     background-color: teal;
-    border-width:thin;
+    border: none;
     color: black;
     text-align: center;
-    font-size: 12px;
+    font-size: 14px;
     height: 40px;
-    width: 120px;
+    width: 190px;
     white-space: nowrap;
+    border-radius: 6px;
 }
 
 .right-box {
